# SDL_gpu_xr_examples

./: .gitignore  CMakeLists.txt  README.md
android/: build.gradle  local.properties.template
android/app/: build.gradle  proguard-rules.pro
android/app/jni/: CMakeLists.txt
android/app/jni/src/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
docs/: XR_CONTROLLER_INPUT.md
examples/SpinningCubes/: main.c
src/: xr_input.c  xr_input.h
